Undo codepen bug fixes.
Deciding to allow overflowing since horizontal scrolling isn’t working
when stopping the overflow.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4236,9 +4236,3 @@ footer a {
 .fork-me {
   background-color: black;
 }
-
-/* line 125, partials/_home.scss */
-
-.pen-msg + div {
-  overflow: scroll;
-}
