--- a/app/styles/partials/_home.scss
+++ b/app/styles/partials/_home.scss
@@ -121,7 +121,3 @@ li p {
 .fork-me {
     background-color: $black;
 }
-
-.pen-msg + div {
-    overflow: scroll;
-}
